packages/website/src/styles/global.css
:root {
  --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  --font-mono: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
  --max-width: 1220px;
  --border-radius: 6px;

  --fg-rgb: 7, 8, 10;
  --fg-muted-rgb: 100, 100, 100;
  --bg-rgb: 252, 252, 252;

  --surface-rgb: 255, 255, 255;
  --border-rgb: 224, 224, 224;
}

@media (prefers-color-scheme: dark) {
  :root {
    --fg-rgb: 238, 238, 238;
    --fg-muted-rgb: 180, 180, 180;
    --bg-rgb: 7, 8, 10; 

    --surface-rgb: 26, 26, 26;
    --border-rgb: 48, 48, 48;
  }
}

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

#root {
  isolation: isolate;
}

body {
  color: rgb(var(--fg-rgb));
  background-color: rgb(var(--bg-rgb)); 
  font-family: var(--font-sans);
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

